# universalWasmLoader-rs

./: .gitignore  Cargo.toml  README.md
src/: abi.rs  lib.rs  types.rs  wit_parser.rs
tests/: booleans_50.wasm  booleans_50.wit  imports_50.wasm  imports_50.wit  spec_tests.rs  strings_50.wasm  strings_50.wit
